@@ -39,6 +39,7 @@ case `uname -n` in
 esac
 
 CLIENT_PORT=10080
+KCLIENT_PORT=10081
 INDEX_PORT=10082
 TAPE_PORT=10083
 
@@ -70,6 +71,8 @@ while [ $# != 0 ]; do
 	ENABLE_TAPE=false;;
     --client-port=?*)
 	CLIENT_PORT=`echo $1 | sed -e 's/[^=]*=//'`;;
+    --kclient-port=?*)
+	KCLIENT_PORT=`echo $1 | sed -e 's/[^=]*=//'`;;
     --index-port=?*)
 	INDEX_PORT=`echo $1 | sed -e 's/[^=]*=//'`;;
     --tape-port=?*)
@@ -87,6 +90,7 @@ while [ $# != 0 ]; do
 	echo "--enable/disable-index: enable/disable index server [`$ENABLE_INDEX && echo enabled || echo disabled`]"
 	echo "--enable/disable-tape: enable/disable tape server [`$ENABLE_TAPE && echo enabled || echo disabled`]"
 	echo "--client-port=<num>: amandad port number [$CLIENT_PORT]"
+	echo "--kclient-port=<num>: kamandad port number [$KCLIENT_PORT]"
 	echo "--index-port=<num>: index server port number [$INDEX_PORT]"
 	echo "--tape-port=<num>: tape server port number [$TAPE_PORT]"
 	exec true;;
@@ -102,9 +106,11 @@ elif [ -f "$SERVICES" ]; then
 	TEMP="$SERVICES.new"
 	{
 	    egrep < "$SERVICES" -v "^(amanda|amandaidx|amidxtape)${SERVICE_SUFFIX}[ 	]"
-	    $ENABLE_AMANDAD && echo "amanda${SERVICE_SUFFIX} ${CLIENT_PORT}/udp"
-	    $ENABLE_INDEX && echo "amandaidx${SERVICE_SUFFIX} ${INDEX_PORT}/tcp"
-	    $ENABLE_TAPE && echo "amidxtape${SERVICE_SUFFIX} ${TAPE_PORT}/tcp"
+	    echo "amanda${SERVICE_SUFFIX} ${CLIENT_PORT}/udp"
+	    echo "amanda${SERVICE_SUFFIX} ${CLIENT_PORT}/tcp"
+	    echo "kamanda${SERVICE_SUFFIX} ${KCLIENT_PORT}/udp"
+	    echo "amandaidx${SERVICE_SUFFIX} ${INDEX_PORT}/tcp"
+	    echo "amidxtape${SERVICE_SUFFIX} ${TAPE_PORT}/tcp"
 	} > "$TEMP"
 	if diff "$SERVICES" "$TEMP" >/dev/null 2>/dev/null; then
 		echo "$SERVICES is up to date"
